force-app/main/default/objects/Historico_OS__c/Historico_OS__c.object-meta.xml
<CustomObject>
    <label>Histórico da OS</label>
    <nameField>
        <displayFormat>HO-{000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Históricos da OS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>