force-app/main/default/objects/Historico_OS__c/fields/Categoria_contato__c.field-meta.xml
<CustomField>
    <fullName>Categoria_contato__c</fullName>
    <formula>TEXT( Status__r.Categoria_contato__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoria do contato</label>
    <type>Text</type>
</CustomField>