force-app/main/default/objects/Historico_OS__c/fields/Codigo_externo__c.field-meta.xml
<CustomField>
    <fullName>Codigo_externo__c</fullName>
    <description>Código externo para identificar o registro</description>
    <externalId>true</externalId>
    <label>Código externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>