force-app/main/default/objects/Historico_OS__c/fields/Data_agenda__c.field-meta.xml
<CustomField>
    <fullName>Data_agenda__c</fullName>
    <label>Data agenda</label>
    <type>DateTime</type>
</CustomField>