force-app/main/default/objects/Historico_OS__c/fields/Data_teste__c.field-meta.xml
<CustomField>
    <fullName>Data_teste__c</fullName>
    <label>Data teste</label>
    <length>255</length>
    <type>Text</type>
</CustomField>