force-app/main/default/objects/Historico_OS__c/fields/Observacao__c.field-meta.xml
<CustomField>
    <fullName>Observacao__c</fullName>
    <label>Observação</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>