force-app/main/default/objects/Historico_OS__c/fields/Ordem_servico__c.field-meta.xml
<CustomField>
    <fullName>Ordem_servico__c</fullName>
    <label>Ordem de serviço</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Históricos da OS</relationshipLabel>
    <relationshipName>Historicos_OS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>