force-app/main/default/objects/Historico_OS__c/fields/SELECT_Batch__c.field-meta.xml
<CustomField>
    <fullName>SELECT_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de controle que informa quando o Histórico já passou pela consulta efetuada pela Schedulable: OS_Atualizar_Informacoes_Agendada que roda de hora em hora. (KCA-381)</description>
    <inlineHelpText>Campo oculto de controle que informa quando o Histórico já passou pela consulta efetuada pela Schedulable: OS_Atualizar_Informacoes_Agendada que roda de hora em hora.</inlineHelpText>
    <label>SELECT Batch</label>
    <type>Checkbox</type>
</CustomField>