force-app/main/default/objects/Historico_OS__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Ação do histórico da OS</description>
    <label>Status</label>
    <referenceTo>Acao_historico_OS__c</referenceTo>
    <relationshipLabel>Históricos da OS</relationshipLabel>
    <relationshipName>Historicos_OS</relationshipName>
    <type>Lookup</type>
</CustomField>