force-app/main/default/objects/Historico_OS__c/fields/String__c.field-meta.xml
<CustomField>
    <fullName>String__c</fullName>
    <label>String</label>
    <length>255</length>
    <type>Text</type>
</CustomField>