force-app/main/default/objects/Historico_OS__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <label>Usuário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>